<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_subtitle">Lum-Learning</string>
    <string name="welcome_home">Welcome home</string>
    <string name="art"><u>ART</u></string>
    <string name="of"><u>OF</u></string>
    <string name="learning"><u>LEARNING</u></string>
    <string name="my_themes">My Themes</string>
    <string name="my_plane">My Plane</string>
</resources>