<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_onboarding"
    >


    <ImageView
        android:id="@+id/rabbit_platform"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rabbit_platform" />

    <ImageView
        android:id="@+id/stars"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@+id/rabbit_platform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/rabbit_shadow"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/rabbit"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/rabbit"
        app:layout_constraintTop_toTopOf="@+id/rabbit_platform"
        app:srcCompat="@drawable/rabbit_shadow" />

    <ImageView
        android:id="@+id/rabbit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/learning_rabbit"
        style="@style/rabbit_style" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@color/onboarding_additional"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rabbit_platform" />

    <ImageView
        android:id="@+id/left_brush"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/brush" />

    <ImageView
        android:id="@+id/right_brush"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/right_brush" />


    <TextView
        android:id="@+id/app_name"
        android:text="@string/app_name_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        style="@style/app_name_style" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="70dp"
        android:background="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/sub_title"
        android:text="@string/welcome_home"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2"
        style="@style/subtitle_style" />

    <TextView
        android:id="@+id/title1"
        android:layout_marginTop="40dp"
        android:text="@string/art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        style="@style/title" />

    <TextView
        android:id="@+id/title2"
        android:layout_marginTop="8dp"
        android:text="@string/of"
        style="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/title3"
        android:layout_marginTop="8dp"
        android:text="@string/learning"
        style="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />
</androidx.constraintlayout.widget.ConstraintLayout>